Add some TODOs, some UI updates, and update T3DLib

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulplog": "^1.0.0",
+    "uglify-es": "^3.3.9",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "yargs": "^11.0.0"
