--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "devDependencies": {
     "browserify": "^16.1.1",
     "gulp": "^3.9.1",
+    "gulp-batch": "^1.0.5",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^5.0.0",
     "gulplog": "^1.0.0",
     "uglify-es": "^3.3.9",
     "vinyl-buffer": "^1.0.1",
